Just another update

--- a/Python podstawowy/2. Podstawy.md
+++ b/Python podstawowy/2. Podstawy.md
@@ -80,7 +80,7 @@ linii
 Umieszczenie takiego stringa w kodzie działa podobnie jak komentarz blokowy, z tą różnicą, że interpreter traktuje go jak pełnoprawny obiekt. Po prostu nie jest on przypisywany do żadnej zmiennej, więc nie wpływa na działanie programu.
 
 ---
-**Komentarze - podsumowanie:**
+**Komentarze — podsumowanie:**
 - Fragment kodu (tekstu), który znajduje się na prawo od znaku # jest komentarzem i nie jest przetwarzany przez interpreter
 - W komentarzach mogą znajdować się na przykład notatki lub tymczasowo nieużywany kod. Nie powinniśmy jednak ich nadużywać. Dobry kod nie wymaga komentarzy aby wiedzieć co się w nim dzieje
 - W Pythonie nie istnieją komentarze blokowe, ale ich rolę spełniają wielolinijkowe stringi, które zapisujemy wewnątrz ''' ... ''' lub """ ... """
@@ -206,7 +206,7 @@ issubclass(bool, int)
 
 
 ---
-**Typy - podsumowanie:**
+**Typy — podsumowanie:**
 - Każdy obiekt w Pythonie ma określony typ
 - Aby sprawdzić jaki on jest używamy funkcji `type`
 - Najczęściej spotykane typy zmiennych to: *string*, *int*, *float*, *bool*
@@ -294,7 +294,7 @@ round(3.1415926, 2)
 
 
 ---
-**Funkcje wbudowane - podsumowanie:**
+**Funkcje wbudowane — podsumowanie:**
 - Funkcja to fragment kodu, który wykonuje określone zadanie podczas jej wywołania
 - Python umożliwia pisanie własnych funkcji, ale oferuje również cały szereg funkcji wbudowanych
 - Funkcja `print` służy do wypisania na ekranie przekazanej do niej wartości
@@ -413,7 +413,7 @@ x /= 5    # x = 2.212
 ```
 
 ---
-**Operacje arytmetyczne - podsumowanie:**
+**Operacje arytmetyczne — podsumowanie:**
 - Python dysponuje standardowymi operatorami arytmetycznymi (+, -, *, /) a także innymi, takimi jak //, % czy **
 - Aby zmienić wartość zmiennej należy użyć operatora przypisania, czyli =
 - Istnieją specjalne operatory (+=, -=, *=, /=) skracające zapis kiedy chcemy do zmiennej przypisać nową wartość wykonując operację wykonaną na dotychczasowej wartości
@@ -553,7 +553,7 @@ my_experience = 6
 
 
 ---
-**Operacje na stringach - podsumowanie:**
+**Operacje na stringach — podsumowanie:**
 - Na obiektach typu string możemy wykonać cały szereg różnych funkcji (metod), które zwracają zmodyfikowaną zawartość tego stringa, głównie w kwestii wielkości liter. Nie nadpisują one jednak oryginalnego obiektu
 - Ze stringa możemy wyciągać tzw. slice'y czyli wycinki wyznaczone na podstawie indeksów poszczególnych znaków. Indeksy te przekazujemy w nawiasach kwadratowych a dla oznaczenia przedziału używamy dwukropka
 - Stringi możemy dodawać używając operatora +
@@ -577,7 +577,7 @@ print(init_number_of_zombies)
 Program zapyta nas najpierw o początkową liczbę ludzi jaka ma wziąć udział w symulacji, następnie o liczbę zombie a na koniec wyprintuje te wartości. Uwaga - nawet kiedy podajemy do funkcji `input` liczby, są one traktowane jako string, np. '4' a nie 4.
 
 ---
-**Funkcja input - podsumowanie:**
+**Funkcja input — podsumowanie:**
 - Aby przechwycić od użytkownika programu wartość z możliwością zapisu jej do zmiennej używamy funkcji `input`
 - Funkcja ta zawsze zwraca stringa
 ---
