--- a/Python podstawowy/3. Struktury danych.md
+++ b/Python podstawowy/3. Struktury danych.md
@@ -81,7 +81,7 @@ empty_list = list()
 ```
 
 --- 
-**`list` - podsumowanie:**
+**`list` — podsumowanie:**
 - Lista to szereg wartości zorganizowanych w ramach jednej struktury danych, jednej zmiennej
 - Do elementów listy możemy się dostać poprzez podanie ich indeksów. Indeksacja zaczyna się od 0 (idąc od początku do końca listy) lub od -1 (idąc od końca do początku)
 - Aby zmodyfikować wartość elementu listy (lub przedziału elementów) należy odwołać się do niego po indeksie a następnie przypisać pożądaną wartość
@@ -136,7 +136,7 @@ empty_tuple = tuple()
 ```
 
 ---
-**`tuple` - podsumowanie:**
+**`tuple` — podsumowanie:**
 - Tuple działają podobnie jak listy, ale są niemutowalne - to znaczy że nie możemy modyfikować ich zawartości
 - Tworząc tuplę możemy użyć do jej zapisu nawiasów okrągłych, ale to przecinek jest niezbędny do tego aby powstała tupla
 - Tuple mogą składać się z obiektów różnych typów
@@ -200,7 +200,7 @@ zombie_character.values()
 Zwraca ona "listę" wartości, w tym przypadku `dict_values(['Zombie', 1.2, -4.32, 2.4, 3, 10, True, None])`
 
 ---
-**dict - podsumowanie:**
+**dict — podsumowanie:**
 - Słownik to zestaw par klucz-wartość. Odwołując się do poszczególnych kluczy możemy dostać się do wartości, które znajdują się pod nimi
 - Dowolny obiekt może być wartością w słowniku, kluczami mogą być tylko [[3. Struktury danych#3.9 Mutowalność, hashowalność i kopiowanie obiektów|obiekty hashowalne]]
 - Aby wyciągnąć same klucze lub same wartości słownika używamy metod `.keys()` lub `.values()`
@@ -237,7 +237,7 @@ unique_items_list = list(set(list_with_duplicates))
 Set może składać się tylko z obiektów hashowalnych. Więcej informacji o hashowalności znajdziesz [[3. Struktury danych#3.9 Mutowalność, hashowalność i kopiowanie obiektów|tutaj]].
 
 ---
-**`set` - podsumowanie:**
+**`set` — podsumowanie:**
 - `set` to struktura danych przechowująca zbiór unikalnych wartości
 - Kolejność elementów w zbiorze nie ma znaczenia. Po jej zamianie mamy do czynienia z dokładnie tym samym zbiorem
 - `set` może zostać użyty do wyznaczenia unikalnych elementów w liście/tupli
@@ -581,7 +581,7 @@ all(humans_infection_status)
 ```
 
 ---
-**Operacje na strukturach danych - podsumowanie:**
+**Operacje na strukturach danych — podsumowanie:**
 - Każda ze struktur danych posiada zbiór metod, które możemy stosować na obiektach ich typu. Służą one m.in. do takich operacji jak dodawanie nowych elementów, usuwanie ich czy wyciąganie wartości pod danym kluczem
 - Na listach oraz tuplach możemy stosować również szereg funkcji matematycznych, m.in. `min`, `max`, `sum`, ...
 - Funkcje `any` oraz `all` rzutują elementy listy/tupli na typ `bool` po czym sprawdzają czy którykolwiek lub wszystkie elementy mają wartość *True*
@@ -719,7 +719,7 @@ simple_list[::-2]
 Od początku do końca co 2 ale idąc wstecz.
 
 ---
-**Slicing - podsumowanie:**
+**Slicing — podsumowanie:**
 - Aby wyciągnąć z listy/tupli pojedynczy element podajemy jego indeks w nawiasach kwadratowych
 - Numeracja elementów zaczyna się od 0
 - Ujemne indeksy oznaczają pozycję liczoną od końca
@@ -796,7 +796,7 @@ simulation_config["humans_start_positions"][-1][0]
 ```
 
 ---
-**Zagnieżdżone struktury - podsumowanie:**
+**Zagnieżdżone struktury — podsumowanie:**
 - Elementami struktur danych mogą być inne struktury danych
 - Pozwala to przechowywać złożone dane, które mogą posiadać wiele stopniów zagnieżdżenia
 - Struktury będące połączeniem list i słowników w dowolnej konfiguracji często nazywamy JSON (*JavaScript Object Notation*)
@@ -878,7 +878,7 @@ dict(enumerate(infection_statuses))
 ```
 
 ---
-**Wbudowane generatory cz. 1 - podsumowanie:**
+**Wbudowane generatory cz. 1 — podsumowanie:**
 - Generator to obiekt zwracający sekwencję wartości, które nie trafiają od razu do pamięci, tylko robią to kolejno. Mechanizm ten nazywa się *lazy evaluation*
 - `zip` to generator, który łączy w pary (lub trójki itd.) elementy dwóch (lub trzech itd.) sekwencji. Zwraca obiekt typu `zip`, który możemy zrzutować na listę tupli
 - `enumerate` to generator, który dla podanej sekwencji zwraca pary indeks-wartość w postaci obiekty typu `enumerate`. Możemy zrzutować go na listę tupli
@@ -1069,7 +1069,7 @@ print(new_d)
 ```
 
 ---
- **Mutowalność, hashowalność i kopiowanie obiektów - podsumowanie:**
+ **Mutowalność, hashowalność i kopiowanie obiektów — podsumowanie:**
  - Obiekty w Pythonie mogą być mutowalne (możliwe do modyfikacji) albo niemutowalne (niemożliwe do modyfikacji)
  - Obiekty w Pythonie mogą być hashowalne (da się z nich policzyć hash) albo niehashowalne. Klucze słownika oraz elementy setu muszą być hashowalne
  - Kiedy tworzymy nową referencję do tego samego - mutowalnego - obiektu, jego modyfikacja za pomocą jednej z referencji będzie widoczna również kiedy korzystamy z drugiej. W celu utworzenia niezależnej kopii listy czy słownika możemy skorzystać z metody `.copy()`
