--- a/Python podstawowy/5. Pętle.md
+++ b/Python podstawowy/5. Pętle.md
@@ -216,7 +216,7 @@ while number_of_humans > 0 and number_of_zombies > 0:
 ```
 
 ---
-**Pętla `while` – podsumowanie:**
+**Pętla `while` — podsumowanie:**
 - Pętla `while` wykonuje się tak długo jak spełniony jest warunek w niej podany
 - Jeżeli warunek będzie zawsze prawdziwy pętla będzie wykonywać się w nieskończoność
 ---
@@ -319,7 +319,7 @@ for i in range(2):
 W ten sposób możemy połączyć elementy obu iterabli na zasadzie "każdy z każdym" i wykonać na takich parach zestaw operacji - w powyższym przykładzie przemnożenie ich przez siebie.
 
 ---
-**Zagnieżdżone pętle - podsumowanie:**
+**Zagnieżdżone pętle — podsumowanie:**
 - Wewnątrz jednej pętli może znajdować się kolejna (a w niej kolejna itd.)
 ---
 ---
