--- a/Python podstawowy/6. Funkcje.md
+++ b/Python podstawowy/6. Funkcje.md
@@ -477,7 +477,7 @@ function(1, 10, 20, 30, a=100, b=200)
 ```
 
 ---
-**Kolejność parametrów - podsumowanie:**
+**Kolejność parametrów — podsumowanie:**
 - Przekazując argumenty pozycyjne należy trzymać się takiej kolejności jaka jest w definicji funkcji. Podczas przekazywania argumentów nazwanych kolejność jest dowolna
 - Kolejność definiowania parametrów jest następująca: zwykłe parametry, *args, parametry z wartością domyślną, **kwargs 
 ---
@@ -572,7 +572,7 @@ testmod()
 Jest w tym celu potrzebny import funkcji `testmod` z biblioteki `doctest`. WIęcej na temat importów w lekcji [[8. Moduły]].
 
 ---
-**Docstring i doctest - podsumowanie:**
+**Docstring i doctest — podsumowanie:**
 - Każda funkcja może i powinna być udokumentowana za pomocą docstringa. Zawiera on informacje o tym co robi dana funkcja, jakie ma parametry i co zwraca
 - Docstring może zawierać również doctesty. Znajdują się w nich przykładowe wywołania funkcji wraz z oczekiwanym outputem
 ---
@@ -711,7 +711,7 @@ func()
 
 ---
 
-**Zakres przestrzeni nazw - podsumowanie:**
+**Zakres przestrzeni nazw — podsumowanie:**
 - Istnieją 3 rodzaje scope'ów - wbudowany, globalny oraz lokalny
 - Wewnątrz funkcji mamy dostęp do obiektów przekazanych jako argument. Trafiają 
 one do scope'u lokalnego
