--- a/Python podstawowy/7. Jakość kodu i obsługa błędów.md
+++ b/Python podstawowy/7. Jakość kodu i obsługa błędów.md
@@ -55,7 +55,7 @@ def func(a = 1, b = 2):
     return a + b
 ```
 
-**PEP 8 - podsumowanie:**
+**PEP 8 — podsumowanie:**
 - Istnieje szereg zaleceń dotyczących pisania poprawnego stylistycznie kodu - można znaleźć jej w PEP 8
 - Trzymanie się tych zasad sprawi że kod będzie bardziej czytelny a także zachowa spójność kiedy pracuje nad nim więcej osób
 ---
@@ -120,7 +120,7 @@ def determine_winner(human_power: Union[int, float], zombie_power: Union[int, fl
         return 0
 ```
 
-***Type annotations* - podsumowanie:**
+***Type annotations* — podsumowanie:**
 - Deklarowanie typów dla zmiennych oraz argumentów funkcji jest w Pythonie opcjonalne
 - Deklarowanie ich (poprzez *type annotations*) zwiększa czytelność kodu i pozwala się w nim lepiej orientować
 - Jeśli nie będziemy przestrzegać deklaracji dotyczących typów danych program będzie działał poprawnie, chociaż niektóre IDE mogą podkreślać taki kod
@@ -138,7 +138,7 @@ Linki do Stacka często pojawiają się wysoko w wynikach wyszukiwania:
 
 Jedną z zalet Stack Overflow jest system punktacji zarówno pytań jak i odpowiedzi, który zwiększa widoczność najbardziej wartościowych treści.
 
-**Stack Overflow - podsumowanie:**
+**Stack Overflow — podsumowanie:**
 - Podczas programowania często napotykamy problemy, które zostały już rozwiązane przez kogoś innego
 - Wiele z nich zostało opisanych na Stack Overflow - serwisie dla programistów, którego celem jest opisywanie i rozwiązywanie tego typu problemów 
 ---
@@ -211,7 +211,7 @@ Wykonując skrypt należy wybrać opcję *Debug* zamiast *Run*. Kiedy program do
 - przejść do kolejnej linijki w ramach scope'u, w którym się znajdujemy (w PyCharmie nazywa się to `Step Over`)
 - wejść do środka funkcji, której wywołanie znajduje się w aktualnej linii (w PyCharmie nazywa się to `Step Into`)
 
-**Debugowanie - podsumowanie:**
+**Debugowanie — podsumowanie:**
 - Proces lokalizacji oraz eliminacji błędów w kodzie nazywa się *debugowaniem*
 - Jednym ze sposób debugowania jest analiza *tracebacku* czyli komunikatu, który pojawia się w terminalu po wystąpieniu błędu
 - Przydatnym narzędziem podczas szukania błędów jest debuger, który pozwala zatrzymać wykonywanie programu w dowolnym miejscu
@@ -287,7 +287,7 @@ x = (1 + 2 + 3 + 4
      + 5 + 6 + 7)
 ```
 
-**Linebreak - podsumowanie:**
+**Linebreak — podsumowanie:**
 - Jeżeli linia kodu jest zbyt długa należy ją złamać, czyli zastosować *linebreak*
 - W strukturach danych przejście do nowej linii może nastąpić po dowolnym elemencie kolekcji. Podobnie podczas definicji czy wywołania funkcji z wieloma parametrami
 - W pozostałych przypadkach *linebreak* może być oznaczony również poprzez znak `\`
