--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -423,7 +423,7 @@ print(my_list)
 # [3, 2, 5, 3]
 ```
 
-**Stringifikacja i reprezentacja - podsumowanie:**
+**Stringifikacja i reprezentacja — podsumowanie:**
 - Aby zmodyfikować domyślny sposób w jaki reprezentowane są obiekty możemy dodać do klasy metody specjalne  \_\_repr()__ oraz \_\_str()\_\_
 - Reprezentacja jest widoczna podczas odwołania się do obiektu w konsoli. Przedstawia ona zawartość obiektu w sposób schematyczny, często zawierając kod, który mógłby być użyty do stworzenia obiektu. Powinna być zrozumiała dla programisty
 - Stringifikacja jest widoczna podczas printowania obiektu lub rzutowania go na string. Powinna przedstawiać zawartość obiektu w sposób przyjazny dla odbiorcy koncowego
@@ -467,7 +467,7 @@ Human.movement_dict
 
 Zarówno wewnątrz jak i na zewnątrz klasy odnosimy się do niego w taki sam sposób jak do zwykłych atrybutów.
 
-**class attribute - podsumowanie:**
+**class attribute — podsumowanie:**
 - Jeżeli wszystkie instancje klasy współdzielą wartość pewnego atrybutu można użyć w tym celu *class attribute*
 - Wartość tego atrybutu jest przypisana nie tylko do obiektów, ale również do całej klasy
 
