--- a/Python podstawowy/4. Instrukcje warunkowe.md
+++ b/Python podstawowy/4. Instrukcje warunkowe.md
@@ -29,7 +29,7 @@ variable is None        # True
 variable is not None    # False
 ```
 
-**Operatory porównania - podsumowanie:**
+**Operatory porównania — podsumowanie:**
 - Aby sprawdzić który z dwóch obiektów jest większy (lub równy) albo mniejszy (lub równy) używamy znanych z matematyki operatorów większości, mniejszości i równości
 - Aby sprawdzić równość dwóch obiektów używamy operatora *==*
 - Aby sprawdzić brak równości dwóch obiektów używamy operatora **!=**
@@ -91,7 +91,7 @@ Kiedy chcemy połączyć warunki logiczne dotyczące relacji mniejszości lub wi
 	3 > 10 > 1     # False
 ```
 	
-**Spójniki logiczne - podsumowanie:**
+**Spójniki logiczne — podsumowanie:**
 	- Aby sprawdzić czy oba warunki logiczne są naraz prawdziwe używamy spójnika *and*
 	- Aby sprawdzić czy przynajmniej jeden z warunków logicznych jest prawdziwy używamy spójnika *or*
 	- Aby sprawdzić czy dokładnie jeden z warunków logicznych jest prawdziwy używamy spójnika *xor* (^)
@@ -165,7 +165,7 @@ if not 0:   # not 0 --> not False --> True
 ```
 
 ---
-**Instrukcja `if` - podsumowanie:**
+**Instrukcja `if` — podsumowanie:**
 - Aby uzależnić wykonanie fragmentu kodu od tego czy spełniony został określony warunek logiczny używamy instrukcji warunkowych
 - Instrukcja warunkowa składa się ze słowa kluczowego `if`, warunku logicznego, dwukropka oraz wciętego bloku kodu
 - Jeśli zamiast warunku logicznego użyjemy innego obiektu - np. stringa, inta czy listy - zostanie on zrzutowany na `bool` a następnie użyty do określenia czy blok kodu ma zostać wykonany
@@ -233,7 +233,7 @@ print(winner)
 
 ---
 
-**Instrukcja `if-else` - podsumowanie:**
+**Instrukcja `if-else` — podsumowanie:**
 - Aby wykonać jeden z dwóch bloków kodu w zależności od tego czy określony warunek logiczny zostanie spełniony należy użyć instrukcji `if-else`
 - Każdy z bloków powinien być wcięty, słowa kluczowe `if` oraz `else` powinny być na tym samym poziomie wcięcia
 - Instrukcja `if-else` może być zapisana w skróconej jednolinijkowej formie aby przypisać do zmiennej różną wartość w zależności od tego czy spełniony jest warunek, czy nie
@@ -306,7 +306,7 @@ else:
 
 ---
 
-**Instrukcja `if-elif-(else)` - podsumowanie:**
+**Instrukcja `if-elif-(else)` — podsumowanie:**
 - Jeśli spośród kilku możliwych scenariuszy które zależne są od przypisanych im warunków logicznych chcemy wykonać tylko jeden używamy instrukcji `if-elif-(else)`
 - *if* musi być dokładnie jeden, *elifów* może być dowolna liczba natomiast *else* może być jeden lub żaden
 - Instrukcje warunkowe możemy zagnieżdżać
