Just another update

--- a/Python podstawowy/2. Podstawy.md
+++ b/Python podstawowy/2. Podstawy.md
@@ -38,13 +38,14 @@ PI = 3.1415926
 ```
 
 ---
-**Definiowanie zmiennych - podsumowanie:**
+**Definiowanie zmiennych – podsumowanie:**
 - Do utworzenia zmiennej potrzebne są: **nazwa zmiennej, operator przypisania (znak równości) oraz wartość zmiennej**. Nie musimy deklarować jej typu. Wynika to z tego, że Python jest językiem typowanym dynamicznie
 - Nazwa zmiennej może zawierać tylko litery, cyfry oraz znak _ . Nie może zaczynać się od cyfry
 - Aby utworzyć zmienną typu tekstowego (string) należy podać wartość w pojedynczych albo podwójnych cudzysłowach
 - Separatorem dziesiętnym w liczbach niecałkowitych jest kropka
 - Istnieje specjalny rodzaj zmiennej służący do przechowywania braku wartości - **None**
 - Jeśli chcemy utworzyć tzw. stałą czyli zmienną, której wartość nie powinna ulec zmianie to zgodnie z konwencją używamy do tego wielkich liter
+
 ---
 ---
 ---
@@ -80,10 +81,11 @@ linii
 Umieszczenie takiego stringa w kodzie działa podobnie jak komentarz blokowy, z tą różnicą, że interpreter traktuje go jak pełnoprawny obiekt. Po prostu nie jest on przypisywany do żadnej zmiennej, więc nie wpływa na działanie programu.
 
 ---
-**Komentarze — podsumowanie:**
+**Komentarze – podsumowanie:**
 - Fragment kodu (tekstu), który znajduje się na prawo od znaku # jest komentarzem i nie jest przetwarzany przez interpreter
 - W komentarzach mogą znajdować się na przykład notatki lub tymczasowo nieużywany kod. Nie powinniśmy jednak ich nadużywać. Dobry kod nie wymaga komentarzy aby wiedzieć co się w nim dzieje
 - W Pythonie nie istnieją komentarze blokowe, ale ich rolę spełniają wielolinijkowe stringi, które zapisujemy wewnątrz ''' ... ''' lub """ ... """
+
 ---
 ---
 ---
@@ -206,12 +208,13 @@ issubclass(bool, int)
 
 
 ---
-**Typy — podsumowanie:**
+**Typy – podsumowanie:**
 - Każdy obiekt w Pythonie ma określony typ
-- Aby sprawdzić jaki on jest używamy funkcji `type`
+- Aby sprawdzić jaki on jest, używamy funkcji `type`
 - Najczęściej spotykane typy zmiennych to: *string*, *int*, *float*, *bool*
 - Aby zmienić typ obiektu (o ile to możliwe) możemy dokonać **rzutowania** używając nazwy typu jako funkcji
 - Aby sprawdzić czy jakiś obiekt jest określonego typu używamy funkcji `isinstance`
+
 ---
 ---
 ---
@@ -294,13 +297,14 @@ round(3.1415926, 2)
 
 
 ---
-**Funkcje wbudowane — podsumowanie:**
+**Funkcje wbudowane – podsumowanie:**
 - Funkcja to fragment kodu, który wykonuje określone zadanie podczas jej wywołania
 - Python umożliwia pisanie własnych funkcji, ale oferuje również cały szereg funkcji wbudowanych
 - Funkcja `print` służy do wypisania na ekranie przekazanej do niej wartości
 - Funkcja `len` służy do sprawdzenia liczby elementów w obiekcie, który jest sekwencją, np. łańcuchem znaków albo [[3. Struktury danych|strukturą danych]]
 - Funkcja `round` służy do zaokrąglania liczb posiadających rozwinięcie dziesiętne
-- Powyższe 3 funkcje to tylko nieliczne przykłady [wbudowanych funkcji Pythona](https://docs.python.org/3/library/functions.html)
+- Powyższe przykłady to tylko nieliczne spośród [funkcji wbudowanych Pythona](https://docs.python.org/3/library/functions.html)
+
 ---
 ---
 ---
@@ -413,11 +417,12 @@ x /= 5    # x = 2.212
 ```
 
 ---
-**Operacje arytmetyczne — podsumowanie:**
+**Operacje arytmetyczne – podsumowanie:**
 - Python dysponuje standardowymi operatorami arytmetycznymi (+, -, *, /) a także innymi, takimi jak //, % czy **
 - Aby zmienić wartość zmiennej należy użyć operatora przypisania, czyli =
-- Istnieją specjalne operatory (+=, -=, *=, /=) skracające zapis kiedy chcemy do zmiennej przypisać nową wartość wykonując operację wykonaną na dotychczasowej wartości
+- Istnieją specjalne operatory (+=, -=, *=, /=) skracające zapis kiedy chcemy zmodyfikować wartość zmiennej poprzez np. dodanie czy odjęcie od niej wartości
 - Zwiększenie wartości zmiennej o 1 nazywamy **inkrementacją**. Zmniejszenie jej o 1 nazywamy **dekrementacją**
+
 ---
 ---
 ---
@@ -553,11 +558,12 @@ my_experience = 6
 
 
 ---
-**Operacje na stringach — podsumowanie:**
-- Na obiektach typu string możemy wykonać cały szereg różnych funkcji (metod), które zwracają zmodyfikowaną zawartość tego stringa, głównie w kwestii wielkości liter. Nie nadpisują one jednak oryginalnego obiektu
+**Operacje na stringach – podsumowanie:**
+- Na obiektach typu string możemy wykonać cały szereg różnych funkcji (metod), które zwracają zmodyfikowaną zawartość tego stringa. Nie nadpisują one jednak oryginalnego obiektu
 - Ze stringa możemy wyciągać tzw. slice'y czyli wycinki wyznaczone na podstawie indeksów poszczególnych znaków. Indeksy te przekazujemy w nawiasach kwadratowych a dla oznaczenia przedziału używamy dwukropka
 - Stringi możemy dodawać używając operatora +
-- Aby wewnątrz stringa umieścić wartość jakiejś zmiennej używamy tzw. f-stringa
+- Aby wewnątrz stringa wstawić wartość dowolnego wyrażenia, używamy tzw. f-stringa
+
 ---
 ---
 ---
@@ -577,9 +583,10 @@ print(init_number_of_zombies)
 Program zapyta nas najpierw o początkową liczbę ludzi jaka ma wziąć udział w symulacji, następnie o liczbę zombie a na koniec wyprintuje te wartości. Uwaga - nawet kiedy podajemy do funkcji `input` liczby, są one traktowane jako string, np. '4' a nie 4.
 
 ---
-**Funkcja input — podsumowanie:**
-- Aby przechwycić od użytkownika programu wartość z możliwością zapisu jej do zmiennej używamy funkcji `input`
+**Funkcja input – podsumowanie:**
+- Aby przechwycić od użytkownika programu jakąś wartość używamy funkcji `input()`
 - Funkcja ta zawsze zwraca stringa
+
 ---
 ---
 ---
