Just another update

--- a/Python podstawowy/4. Instrukcje warunkowe.md
+++ b/Python podstawowy/4. Instrukcje warunkowe.md
@@ -92,12 +92,13 @@ Kiedy chcemy połączyć warunki logiczne dotyczące relacji mniejszości lub wi
 	3 > 10 > 1     # False
 ```
 	
-**Spójniki logiczne — podsumowanie:**
-	- Aby sprawdzić czy oba warunki logiczne są naraz prawdziwe używamy spójnika *and*
-	- Aby sprawdzić czy przynajmniej jeden z warunków logicznych jest prawdziwy używamy spójnika *or*
-	- Aby sprawdzić czy dokładnie jeden z warunków logicznych jest prawdziwy używamy spójnika *xor* (^)
-	- Możemy łączyć warunki logiczne w dłuższe łańcuchy. Wtedy spójnik *and* ma pierwszeństwo przed *or*
-	- Aby połączyć kilka warunków logicznych dotyczących relacji mniejszości lub większości możemy użyć kilku znaków typu <, >, <=, ... w jednej linii
+**Spójniki logiczne – podsumowanie:**
+- Aby sprawdzić czy oba warunki logiczne są naraz prawdziwe używamy spójnika *and*
+- Aby sprawdzić czy przynajmniej jeden z warunków logicznych jest prawdziwy używamy spójnika *or*
+- Aby sprawdzić czy dokładnie jeden z warunków logicznych jest prawdziwy używamy spójnika *xor* (^)
+- Możemy łączyć warunki logiczne w dłuższe łańcuchy. Wtedy spójnik *and* ma pierwszeństwo przed *or*
+- Aby połączyć kilka warunków logicznych dotyczących relacji mniejszości lub większości możemy użyć kilku znaków typu <, >, <=, ... w jednej linii
+
 ---
 ---
 ---
