--- a/Python podstawowy/5. Pętle.md
+++ b/Python podstawowy/5. Pętle.md
@@ -162,13 +162,14 @@ for i in range(6):
 W powyższym przykładzie iterator przejdzie po wszystkich wartościach z range'a, ale nic poza tym się nie wydarzy.
 
 ---
-**Pętla `for` — podsumowanie:**
+**Pętla `for` – podsumowanie:**
 - Funkcja `range` zwraca zakres wartości od-do rosnących o określoną wartość (krok)
-- Wartości zwrócone przez `range` nie trafiają do pamięci na raz lecz jedna po drugiej, dopiero kiedy to sprowokujemy
-- Aby wykonać dany blok kodu określoną liczbę razy należy użyć pętli `for`
-- Pętla `for` posiada **iterator** czyli zmienną, która w każdej iteracji posiada inną wartość. W pewnych przypadkach iteratorów może być więcej niż jeden
+- Wartości zwrócone przez `range` nie trafiają do pamięci na raz, lecz jedna po drugiej – dopiero kiedy to sprowokujemy
+- Aby wykonać dany blok kodu określoną liczbę razy, należy użyć pętli `for`
+- Pętla `for` posiada **iterator** czyli zmienną, która w każdej iteracji przyjmuje inną wartość. W pewnych przypadkach iteratorów może być więcej niż jeden
 - Możemy iterować po listach, słownikach czy innych strukturach danych. Obiekt po którym możemy iterować to iterabla (ang. *iterable*)
 - Aby nie wykonywać w pętli żadnych instrukcji należy umieścić tam instrukcję `pass`
+
 ---
 ---
 ---
@@ -216,9 +217,10 @@ while number_of_humans > 0 and number_of_zombies > 0:
 ```
 
 ---
-**Pętla `while` — podsumowanie:**
-- Pętla `while` wykonuje się tak długo jak spełniony jest warunek w niej podany
-- Jeżeli warunek będzie zawsze prawdziwy pętla będzie wykonywać się w nieskończoność
+**Pętla `while` – podsumowanie:**
+- Pętla `while` wykonuje się tak długo, jak spełniony jest warunek w niej podany
+- Jeżeli warunek będzie zawsze prawdziwy, pętla będzie wykonywać się w nieskończoność
+
 ---
 ---
 ---
@@ -292,9 +294,10 @@ for zombie_power in zombies_power:
 ```
 
 ---
-**Instrukcje `break` oraz `continue` — podsumowanie:**
+**Instrukcje `break` oraz `continue` – podsumowanie:**
 - Aby wyjść z pętli w dowolnym jej miejscu używamy instrukcji `break`
 - Aby przejść do kolejnej iteracji używamy instrukcji `continue`
+
 ---
 ---
 ---
@@ -319,8 +322,9 @@ for i in range(2):
 W ten sposób możemy połączyć elementy obu iterabli na zasadzie "każdy z każdym" i wykonać na takich parach zestaw operacji - w powyższym przykładzie przemnożenie ich przez siebie.
 
 ---
-**Zagnieżdżone pętle — podsumowanie:**
+**Zagnieżdżone pętle – podsumowanie:**
 - Wewnątrz jednej pętli może znajdować się kolejna (a w niej kolejna itd.)
+
 ---
 ---
 ---
@@ -375,9 +379,10 @@ for h, power in enumerate(humans_power):
 ```
 
 ---
-**`zip` i `enumerate` w pętli `for` — podsumowanie:**
-- Aby przeiterować po kilku iterablach jednocześnie używamy do funkcji `zip`
+**`zip` i `enumerate` w pętli `for` – podsumowanie:**
+- Aby przeiterować po kilku iterablach jednocześnie używamy funkcji `zip`
 - Aby w pętli `for` móc korzystać z licznika iteracji należy przekazać iterablę do funkcji `enumerate`
+
 ---
 ---
 ---
@@ -422,10 +427,11 @@ print(sum_of_experience)
 ```
 
 ---
-***list comprehension* — podsumowanie:**
+***list comprehension* – podsumowanie:**
 - Aby w jednej linijce utworzyć listę posługując się do tego pętlą możemy użyć *list comprehension*
 - Elementem *list comprehension* może być instrukcja warunkowa
-- Kiedy tylko jest taka możliwość powinniśmy uzywać tej notacji. Sprawia ona że kod jest krótszy i bardziej elegancki
+- Kiedy tylko jest taka możliwość, powinniśmy uzywać *list comprehension*. Dzięki nim kod jest krótszy i bardziej elegancki
+
 ---
 ---
 ---
