--- a/Python podstawowy/6. Funkcje.md
+++ b/Python podstawowy/6. Funkcje.md
@@ -55,9 +55,10 @@ shoot_five_zombies()
 ```
 
 ---
-**Procedura — podsumowanie:**
-- Aby nie kopiować tego samego kodu za każdym razem kiedy chcemy z niego skorzystać może zamknąć go w funkcji i wywoływać ją w różnych miejscach
+**Procedura – podsumowanie:**
+- Aby nie kopiować tego samego kodu za każdym razem kiedy chcemy z niego skorzystać, można zamknąć go w funkcji i wywoływać ją w różnych miejscach
 - Funkcja, która nie zwraca żadnej wartości to procedura
+
 ---
 ---
 ---
@@ -114,11 +115,12 @@ calculate_something(a=5, c=2, b=4)
 ```
 
 ---
-**Parametry funkcji — podsumowanie:**
+**Parametry funkcji – podsumowanie:**
 - Funkcja może (ale nie musi) posiadać jeden lub więcej parametrów
-- Parametry zachowują się jak zmienne, które istnieją tylko wewnątrz funkcji
-- Podczas wywoływania funkcji posiadającej parametry musimy przekazać do niej argumenty, czyli wartości przypisane do poszczególnych parametrów
+- Parametry zachowują się jak zmienne, które istnieją tylko wewnątrz funkcji (zmienne lokalne)
+- Podczas wywoływania funkcji posiadającej parametry, przekazujemy do niej argumenty
 - Argumenty mogą być pozycyjne (przekazujemy je według kolejności) albo nazwane (przekazujemy je używając nazwy parametru)
+
 ---
 ---
 ---
@@ -198,10 +200,11 @@ print(x2)
 ```
 
 ---
-**Słowo kluczowe return — podsumowanie:**
-- Aby funkcja zwróciła jedną lub więcej wartości używamy słowa kluczowego `return`. Zwracane wartości będą mogły być użyte również poza funkcją
-- Użycie `return` kończy działanie funkcji. Najczęściej dzieje się to na samym końcu ciała funkcji
+**Słowo kluczowe return – podsumowanie:**
+- Aby funkcja zwróciła jedną lub więcej wartości używamy słowa kluczowego `return`. Zwracane wartości będą mogły być użyte również poza funkcją, o ile je przechwycimy
+- Użycie `return` kończy działanie funkcji. Najczęściej dzieje się to na samym końcu ciała funkcji, ale nie zawsze
 - Aby zwrócić kilka wartości należy podać je po przecinku
+
 ---
 ---
 ---
@@ -229,10 +232,11 @@ calculate_distance_to_point((2, 2), (1, 1))
 Powyższa funkcja oblicza i zwraca odległość między dwoma punktami (tuplami) o współrzędnych x, y. Jeśli nie przekażemy do niej drugiego punktu (*reference*) to zostanie użyty tam punkt (0, 0). Jeśli przekażemy inną wartość — to ona będzie wykorzystana.
 
 ---
-**Parametry z wartością domyślną — podsumowanie:**
-- Parametr funkcji może mieć wartość domyślną - definiujemy ją w deklaracji funkcji
+**Parametry z wartością domyślną – podsumowanie:**
+- Parametr funkcji może mieć wartość domyślną - deklarujemy ją w definicji funkcji
 - Takie parametry muszą być zadeklarowane *po* tych bez wartości domyślnej
 - Jeśli przekażemy jako argument inną wartość, zostanie ona użyta
+
 ---
 ---
 ---
@@ -279,10 +283,11 @@ list(filter(is_even, list_of_numbers))
 Obiekt typu `filter` jest iterablą a więc możemy po nim iterować.
 
 ---
-**Wbudowane generatory cz. 2 — podsumowanie:**
+**Wbudowane generatory cz. 2 – podsumowanie:**
 - Aby zmapować sekwencję używając dowolnej funkcji używamy generatora `map`
-- Aby przefiltrować sekwencję uzywając funkcji, która zwraca wartość logiczną używamy generatora `filter`
+- Aby przefiltrować sekwencję używając funkcji, która zwraca wartość logiczną używamy generatora `filter`
 - Obiekty typów `map` i `filter` są iterablami
+
 ---
 ---
 ---
@@ -313,9 +318,10 @@ list(filter(lambda x: x % 2 == 0, list_of_numbers))
 ```
 
 ---
-**Lambda — podsumowanie:**
-- Kiedy chcemy przekazać funkcję jako argument dla innej funkcji możemy użyć lambdy zamiast nazywać i definiować tę funkcję jako obiekt
+**Lambda – podsumowanie:**
+- Kiedy chcemy przekazać funkcję jako argument dla innej funkcji, możemy użyć lambdy zamiast nazywać i definiować tę funkcję osobno
 - Lambda posiada jeden lub więcej parametrów (po przecinku). To co znajduje się po dwukropku jest zwracane 
+
 ---
 ---
 ---
@@ -360,7 +366,7 @@ calculate_human_score(**{"velocity": 2, "experience": 4, "power": 3})
 ```
 
 ---
-***arguments unpacking* — podsumowanie:**
+***arguments unpacking* – podsumowanie:**
 - Aby rozbić listę lub tuplę na poszczególne elementy, które zostaną przekazane do funkcji jako argumenty pozycyjne należy użyć operatora *
 - Aby rozbić słownik na poszczególne pary klucz wartość, które zostaną przekazane do funkcji jako argumenty nazwane należy użyć operatora ** 
 
@@ -412,9 +418,10 @@ print(zombie_dict)
 ```
 
 ---
-**`args`, `kwargs` — podsumowanie:**
-- Aby móc przekazać do funkcji dowolnie dużo argumentów pozycyjnych w definicji tej funkcji należy umieścić `*args*`. Wówczas przekazane argumenty trafią do niej w postaci tupli
-- Aby móc przekazać do funkcji dowolnie dużo argumetnów nazwanych w definicji tej funkcji należy umieścić `**kwargs`. Wówczas przekazane argumenty trafią do niej w postaci słownika
+**`args`, `kwargs` – podsumowanie:**
+- Aby móc przekazać do funkcji dowolnie dużo argumentów pozycyjnych, w definicji tej funkcji należy umieścić `*args*`. Wówczas przekazane argumenty trafią do niej w postaci tupli
+- Aby móc przekazać do funkcji dowolnie dużo argumetnów nazwanych, w definicji tej funkcji należy umieścić `**kwargs`. Wówczas przekazane argumenty trafią do niej w postaci słownika
+
 ---
 ---
 ---
@@ -477,9 +484,10 @@ function(1, 10, 20, 30, a=100, b=200)
 ```
 
 ---
-**Kolejność parametrów — podsumowanie:**
-- Przekazując argumenty pozycyjne należy trzymać się takiej kolejności jaka jest w definicji funkcji. Podczas przekazywania argumentów nazwanych kolejność jest dowolna
-- Kolejność definiowania parametrów jest następująca: zwykłe parametry, *args, parametry z wartością domyślną, **kwargs 
+**Kolejność parametrów – podsumowanie:**
+- Przekazując argumenty pozycyjne należy trzymać się takiej kolejności, jaka jest w definicji funkcji. Podczas przekazywania argumentów nazwanych, kolejność jest dowolna
+- Kolejność definiowania parametrów jest następująca: zwykłe parametry, *args, parametry opcjonalne, **kwargs
+
 ---
 ---
 ---
@@ -572,9 +580,10 @@ testmod()
 Jest w tym celu potrzebny import funkcji `testmod` z biblioteki `doctest`. WIęcej na temat importów w lekcji [[8. Moduły]].
 
 ---
-**Docstring i doctest — podsumowanie:**
+**Docstring i doctest – podsumowanie:**
 - Każda funkcja może i powinna być udokumentowana za pomocą docstringa. Zawiera on informacje o tym co robi dana funkcja, jakie ma parametry i co zwraca
 - Docstring może zawierać również doctesty. Znajdują się w nich przykładowe wywołania funkcji wraz z oczekiwanym outputem
+
 ---
 ---
 ---
