--- a/Python podstawowy/7. Jakość kodu i obsługa błędów.md
+++ b/Python podstawowy/7. Jakość kodu i obsługa błędów.md
@@ -120,10 +120,11 @@ def determine_winner(human_power: Union[int, float], zombie_power: Union[int, fl
         return 0
 ```
 
-***Type annotations* — podsumowanie:**
+***Type annotations* – podsumowanie:**
 - Deklarowanie typów dla zmiennych oraz argumentów funkcji jest w Pythonie opcjonalne
 - Deklarowanie ich (poprzez *type annotations*) zwiększa czytelność kodu i pozwala się w nim lepiej orientować
 - Jeśli nie będziemy przestrzegać deklaracji dotyczących typów danych program będzie działał poprawnie, chociaż niektóre IDE mogą podkreślać taki kod
+
 ---
 ---
 ---
